--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
+    "@angular/animations": "^5.2.9",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
@@ -24,6 +24,7 @@
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "font-awesome": "~4.7.0",
+    "ng2-toastr": "^4.1.2",
     "ngx-bootstrap": "^2.0.3",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
