--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "font-awesome": "~4.7.0",
+    "ng2-select": "1.2.0",
     "ng2-toastr": "^4.1.2",
     "ngx-bootstrap": "^2.0.3",
     "rxjs": "^5.5.2",
